samples/_failures_safe/1761250464_47f508_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51685401.c: In function ‘main’:
./samples/SAFE/__tmp_51685401.c:141:9: error: expected declaration or statement at end of input
  141 |         printf("\nAvailable operations:\n");
      |         ^~~~~~
./samples/SAFE/__tmp_51685401.c:141:9: error: expected declaration or statement at end of input
